--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "body-parser": "^1.18.2",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^8.2.1",
+    "multer": "^1.3.0",
     "pg-promise": "^8.4.2"
   }
 }
